<resources>
    <string name="app_name">easywin</string>
    <string name="meeting_name">Информация о встрече</string>
    <string name="join_with_id">Введите id</string>
    <string name="join_with_qr">Сканировать QR код</string>
    <string name="join_button">Присоединиться</string>
    <string name="big">30dp</string>
    <string name="pay_string">ОПЛАТИТЬ</string>
    <string name="join_string">ЗАЙТИ</string>
    <string name="room_number">Комната</string>
    <string name="login_header">Здарова</string>
    <string name="login_header">ГРУППОВЫЕ СЧЕТА</string>
    <string name="create_new_account">Создать аккаунт</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="enter">Войти</string>
    <string name="wrong_login_data">Неверные данные пользователя</string>
    <string name="close_string">Закрыть</string>
    <string name="creation_exp">Здесь вы можете создать вечеринку</string>
    <string name="party_name_hint">Название вечеринки</string>
    <string name="explaint2Text">Это первый этап создания вечеринки дальше вы сможете подключить к ней своих друзей и разделить ваш счет</string>
    <string name="expalain_wait_state">Ожидайте пока создатель добавляет всех участников тусовки</string>
    <string name="history">История</string>
    <string name="alert">Уведомления</string>
    <string name="settings">Настройки</string>
</resources>
