<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackgroundColor"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rounded_sqare"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src = "@drawable/ic_logo_new" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/login_header"
                android:textColor="@color/defaultBackgroundColor"
                android:textSize="@dimen/header_text_size" />
        </LinearLayout>

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/defaultBackgroundColor"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:textColor="@color/defaultBackgroundColor"
            android:textColorHint="@color/defaultBackgroundColor"
            android:textCursorDrawable="@color/defaultBackgroundColor"
            android:textSize="@dimen/default_text_size" />


        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/defaultBackgroundColor"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/defaultBackgroundColor"
            android:textColorHint="@color/defaultBackgroundColor"
            android:textCursorDrawable="@color/defaultBackgroundColor"
            android:textSize="@dimen/default_text_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onLoginButtonClick"
                android:text="@string/enter"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:elevation="24dp"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone" />
        </FrameLayout>


        <Button
            style="@style/BorderlessButton"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/defaultBackgroundColor"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

</FrameLayout>