<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreatemeetActivity">

        <fragment
            android:id="@+id/topBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:name="com.example.easywin.fragments.TopBarFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/explainText"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/creation_exp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            android:backgroundTint="@color/themeColor"
            android:hint="@string/party_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explainText" />

        <TextView
            android:id="@+id/explain2Text"
            app:layout_constraintTop_toBottomOf="@id/editText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="24dp"
            android:textSize="16sp"
            android:background="@drawable/secondary_info_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explaint2Text" />

        <Button
            android:id="@+id/button"
            android:layout_width="185dp"
            android:layout_height="68dp"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/qr_code_activity_button"
            android:onClick="onCreateButtonClick"
            android:textSize="22sp"
            android:text="СОЗДАТЬ"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/trans_layer"
        tools:context=".CreatemeetActivity"
        android:id="@+id/transOverlay"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>